fix(account): make sidebar full width on mobile for account screens

--- a/src/modules/shared/layouts/SidebarLayout/SidebarLayout.module.scss
+++ b/src/modules/shared/layouts/SidebarLayout/SidebarLayout.module.scss
@@ -37,7 +37,7 @@ $l-sidebar-collapse-to: "md";
 		width: 70%;
 		padding-bottom: $c-feedback-button-height;
 
-		@include respond-at("md") {
+		@include respond-to("md") {
 			flex-grow: 1;
 		}
 
